Quick fix for image tagging - imgareaselect background covered input form

--- a/www/static/anqh.less
+++ b/www/static/anqh.less
@@ -446,7 +446,7 @@ div.image                              { text-align: center;
 .imgareaselect-border3,
 .imgareaselect-border4                 { .opacity(50); }
 .imgareaselect-handle                  { background-color: white; border: solid 1px white; .opacity(50); }
-.imgareaselect-outer                   { background-color: black; .opacity(50); }
+.imgareaselect-outer                   { background-color: black; .opacity(50); z-index: 0 !important; }
 .imgareaselect-selection               { }
 
 // Charts
